# marionette

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEMO.md  DISTILLER_ARCHITECTURE.md  FINDINGS.md  README.md  RELEASING.md  pyproject.toml
.github/: pull_request_template.md
artifacts/: declarative_checks_acceptance.md  design_advisor.md  design_append_only_context.md  design_ast_preview.md  design_compaction_advisor.md  design_declarative_checks.md  design_memory_layers.md  design_memory_offload.md  design_omp_token_lift.md  design_persistent_eval.md  design_provider_cassettes.md  design_time_travel_rules.md  feature_flags.md  hash_edit_acceptance.md  internal_uri_acceptance.md  lsp_acceptance.md  omp_round10_plan.md  omp_round11_plan.md  omp_round2_plan.md  omp_round3_plan.md  omp_round4_plan.md  omp_round6_plan.md  omp_round7_plan.md  omp_round8_plan.md  omp_round9_plan.md  omp_ship_plan.md  provider_cassettes_acceptance.md  rqgm_round10_plan.md  rqgm_round11_plan.md  rqgm_round5_plan.md  rqgm_round7_plan.md  rqgm_round8_plan.md  rqgm_round9_plan.md  spill_offload_acceptance.md  tool_discovery_acceptance.md  tool_output_savings_acceptance.md
bench/: __init__.py  cache_wars.py
docs/: LEGACY_FRONTEND.md  NEXT_WAVE_MULTI_SESSION.md  NEXT_WAVE_WORKER_THRIFT.md  discord-mcp.md  index.html  install.ps1  install.sh  session_decisions_2026-07-09.md  session_decisions_2026-07-09_v0.9.20.md  session_decisions_2026-07-09_v0.9.21.md  session_decisions_2026-07-09_v0.9.22.md  session_decisions_2026-07-09_v0.9.23.md  session_decisions_v0_7_12_to_24.md  (+9 more)
(+692 files in other folders)
