[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-harness"
version = "0.9.128"
description = "Research rig: which LLMs can drive Puppetmaster as a native harness layer"
requires-python = ">=3.9"
dependencies = [
    "pypdf"
]

[project.scripts]
harness = "harness.cli:main"

[project.optional-dependencies]
# Puppetmaster is required to execute swarm intents (the bridge). Installed
# editable from the local checkout in dev; not pinned here to avoid coupling
# the research rig to a PyPI release of an internal tool.
dev = [
    "pytest>=7"
]

[tool.setuptools.packages.find]
include = ["pmharness*", "harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: test requires real network access",
    "swarm: test drives real Puppetmaster (slow subprocess spawns)",
    "full_auto_safety: offline full-auto safety invariants (Wave 6 CI gate)",
]
